# DEChallenge

./: .env  .gitignore  Dockerfile.postgres  Dockerfile.python  Dockerfile.typesense  README.md  alembic.ini  constants.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 04bf6480dbec_first_revision.py  3497c30b2fd6_add_gold_tables.py  517306f2c17b_add_new_table.py  6325b95e1064_redefine_schema.py  fd45d6051557_add_tables.py
api/: digestion.py  ingestion.py  querying.py
api/response_models/: ingestion.py
controllers/: digestion.py  querying.py
database/: connection.py  models.py  repositories.py  typesense_models.py
repositories/: minio.py  postgre.py  typesense.py
sample_files/: songs-reduced.json
security/: authentication.py
