[project]
name = "dechallenge"
version = "0.1.0"
description = "Data Engineering challenge for PwC Rosario"
authors = [
    {name = "Fernando Del Fedele"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.10,<0.116.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
